# Proyecto_programacion

./: CMakeLists.txt  Dia.cpp  Dia.h  Equipo.cpp  Equipo.h  Incidencias.cpp  Incidencias.h  Mantenimiento.cpp  Mantenimiento.h  SistemaCentral.cpp  SistemaCentral.h  Tecnicos.cpp  Tecnicos.h  main.cpp
